# sp-dl

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: CONTRIBUTING.md
src/sp_dl/: __init__.py  __main__.py  cli.py  config.py  constants.py  models.py
src/sp_dl/auth/: __init__.py  base.py  client_creds.py  cookie_auth.py  device_code.py  interactive.py  session.py  token_cache.py
src/sp_dl/downloader/: __init__.py  engine.py  ffmpeg.py  progress.py
src/sp_dl/resolver/: __init__.py  base.py  graph_api.py  media_stream.py  sharing.py  sp_rest.py  stream_page.py
src/sp_dl/url_parser/: __init__.py  base.py  detector.py  direct_path.py  doc_aspx.py  sharing_link.py  stream_aspx.py
tests/: conftest.py  test_cli.py  test_cli_download.py  test_config.py
tests/auth/: test_client_creds.py  test_cookie_auth.py  test_device_code.py  test_interactive.py  test_session.py  test_token_cache.py
tests/downloader/: test_engine.py  test_ffmpeg.py  test_progress.py
tests/fixtures/: graph_driveitem.json  sample_cookies.txt  sp_rest_file.json  stream_aspx_page.html
tests/resolver/: test_base.py  test_graph_api.py  test_media_stream.py  test_sharing.py  test_sp_rest.py  test_stream_page.py
tests/url_parser/: test_detector.py  test_direct_path.py  test_doc_aspx.py  test_sharing_link.py  test_stream_aspx.py
